--- a/src/App.less
+++ b/src/App.less
@@ -1,3 +1,10 @@
-.container {
-  margin-bottom: 50px !important;
+@primary: #eef6fb;
+
+body {
+  margin: 0;
+}
+
+.app-container {
+  background: @primary;
+  height: 100vh;
 }
