--- a/src/App.less
+++ b/src/App.less
@@ -1,10 +1,69 @@
-@primary: #eef6fb;
+@firstColor: #eef6fb;
+@secondColor: #333339;
+@white: #ffffff;
+@thirdColor: #5fb0e8;
 
 body {
   margin: 0;
+  font-family: "Open Sans", sans-serif;
 }
 
 .app-container {
-  background: @primary;
+  background: @firstColor;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  .header {
+    display: flex;
+    flex-direction: row;
+    margin-top: 32px;
+    .item {
+      padding: 10px 30px;
+      span {
+        text-transform: uppercase;
+        color: @secondColor;
+        cursor: pointer;
+        font-size: 24px;
+        font-weight: lighter;
+      }
+      .active {
+        color: @thirdColor;
+        font-weight: bold;
+      }
+    }
+  }
+  .main-content {
+    width: 800px;
+    height: 600px;
+    margin-top: 16px;
+    background: @white;
+    border-radius: 16px;
+    padding: 8px;
+    // box-shadow: 10px 10px 8px 10px #888888;
+    .today-widget {
+      height: 350px;
+      background: @firstColor;
+      border-top-left-radius: 16px;
+      border-top-right-radius: 16px;
+    }
+    .weekly-widget {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 8px;
+      .day-widget {
+        background: @firstColor;
+        width: 196px;
+        height: 240px;
+        margin-right: 8px;
+        &:first-of-type {
+          border-bottom-left-radius: 16px;
+        }
+        &:last-of-type {
+          margin-right: 0px;
+          border-bottom-right-radius: 16px;
+        }
+      }
+    }
+  }
 }
