--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,7 @@ body {
 .app-container .main-content .today-widget .wrapper {
   display: flex;
   margin-top: 24px;
+  align-items: center;
 }
 .app-container .main-content .today-widget .wrapper .icon-view {
   width: 100px;
@@ -67,6 +68,11 @@ body {
   font-weight: 100;
   color: #333339;
 }
+.app-container .main-content .secondary-text {
+  font-size: 24px;
+  font-weight: 100;
+  color: #333339;
+}
 .app-container .main-content .weekly-widget {
   display: flex;
   justify-content: space-around;
@@ -80,6 +86,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .app-container .main-content .weekly-widget .day-widget:first-of-type {
   border-bottom-left-radius: 16px;
@@ -87,4 +94,16 @@ body {
 .app-container .main-content .weekly-widget .day-widget:last-of-type {
   margin-right: 0px;
   border-bottom-right-radius: 16px;
+}
+.app-container .main-content .weekly-widget .day-widget .icon {
+  width: 50px;
+  height: 50px;
+  background: #5fb0e8;
+  margin-top: 24px;
+}
+.app-container .main-content .weekly-widget .day-widget .text {
+  margin-top: 24px;
+  font-size: 28px;
+  font-weight: 600;
+  color: #333339;
 }
