--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ body {
   background: #ffffff;
   border-radius: 16px;
   padding: 8px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07), 0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
 }
 .app-container .main-content .today-widget {
   height: 350px;
