--- a/src/App.less
+++ b/src/App.less
@@ -2,6 +2,9 @@
 @secondColor: #333339;
 @white: #ffffff;
 @thirdColor: #5fb0e8;
+@mobileBreakPoint: 768px;
+@tabletBreakPoint: 1024px;
+@defaultGap: 16px;
 
 body {
   margin: 0;
@@ -36,16 +39,18 @@ body {
   .main-content {
     width: 800px;
     height: 600px;
-    margin-top: 16px;
+    margin-top: @defaultGap;
     background: @white;
-    border-radius: 16px;
+    border-radius: @defaultGap;
     padding: 8px;
-    // box-shadow: 10px 10px 8px 10px #888888;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07),
+      0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07),
+      0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
     .today-widget {
       height: 350px;
       background: @firstColor;
-      border-top-left-radius: 16px;
-      border-top-right-radius: 16px;
+      border-top-left-radius: @defaultGap;
+      border-top-right-radius: @defaultGap;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -92,11 +97,11 @@ body {
         align-items: center;
         flex-direction: column;
         &:first-of-type {
-          border-bottom-left-radius: 16px;
+          border-bottom-left-radius: @defaultGap;
         }
         &:last-of-type {
           margin-right: 0px;
-          border-bottom-right-radius: 16px;
+          border-bottom-right-radius: @defaultGap;
         }
         .icon {
           width: 50px;
